--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" type="image/x-icon" href="Asset-Sipentas/" />
+    <link rel="shortcut icon" type="image/x-icon" href="Asset-Sipentas/Logo-kotatasik.png" />
 </head>
 
 <body>
