--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" type="image/x-icon" href="Asset-Sipentas/Logo-kotatasik.png" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 </head>
 
 <body>
@@ -44,7 +45,7 @@
             <div class="row mb-3">
                 <div class="col-md-12">
                     <img src="Asset-Sipentas/Logo-kotatasik.png" alt="" srcset="">
-                    <img src="Asset-Sipentas/Logo-diskominfo.png" alt="" srcset="">
+                    <img src="Asset-Sipentas/logo-pmptsp.svg" alt="" srcset="">
                 </div>
             </div>
             
