--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           </div>
           <div class="d-flex animate__animated animate__fadeInLeft">
             <a href="" class="btn btn-md btn-outline-light me-3">Masuk</a>
-            <a href="" class="btn btn-md btn-info">Daftar</a>
+            <a href="" class="btn btn-md btn-primary">Daftar</a>
           </div>
         </div>
       </div>
